--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="navbar-header">
-    <div class="navbar-header"><a class="navbar-brand" href="#">ABC Portland</a></div>
+    <div class="navbar-header"><a class="navbar-brand" href="/">ABC Portland</a></div>
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
@@ -10,8 +10,15 @@
   </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav pull-right">
-      <li><%= link_to "Sign up", new_user_registration_path, remote: true  %><li>
-      <li><%= link_to "Login", new_user_session_path, remote: true  %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to edit_user_registration_path, remote: true do %>
+          Logged in as <strong><%= current_user.email %></strong>
+          <% end %>
+        </li>
+      <% else %>
+        <li><%= link_to "Sign up", new_user_registration_path, remote: true  %><li>
+        <li><%= link_to "Login", new_user_session_path, remote: true  %></li>
+      <% end %>
       <!-- <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
         <ul class="dropdown-menu">
