--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,7 @@
           Logged in as <strong><%= current_user.email %></strong>
           <% end %>
         </li>
+        <li><%= link_to 'Logout', destroy_user_session_path, method: :get, :class => 'navbar-link' %></li>
       <% else %>
         <li><%= link_to "Sign up", new_user_registration_path, remote: true  %><li>
         <li><%= link_to "Login", new_user_session_path, remote: true  %></li>
