--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,18 @@
 <div class="main-search-banner">
   <div class="video-container">
-  <video autoplay loop id="bgvid">
-      <source src="/videos/beer.mp4" type="video/mp4">
-  </video>
+    <div class="row">
+      <video autoplay loop id="bgvid">
+        <source src="/videos/beer.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
 </div>
-</div>
+  <div class="container">
+    <div class="row">
+      <% @blogs.each do |blog| %>
+      <%= blog.headline %>
+      <%= blog.story %>
+      by <%= blog.name %>
+      <% end %>
+    </div>
+  </div>
