--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -51,6 +51,11 @@
       <li><a href="#">Forum</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="#">About</a></li>
+      <% if user_signed_in? %>
+        <li>
+           <%= link_to "New Blog", new_blog_path, class: "btn btn-primary" %>
+        </li>
+      <% end %>
       <!-- <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
         <ul class="dropdown-menu">
