--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -6,7 +6,7 @@
       <br>
       <%= f.text_field :headline, class: 'form-control', placeholder: 'Enter headline' %>
       <br>
-      <%= f.text_field :story, class: 'form-control', placeholder: 'Enter Story' %>
+      <%= f.text_area :story, class: 'form-control', rows: '5', placeholder: 'Enter Story' %>
       <br>
       <%= f.submit class: 'btn btn-default'%>
       <% end %>
