--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -53,7 +53,7 @@
       <li><a href="#">About</a></li>
       <% if user_signed_in? %>
         <li>
-           <%= link_to "New Blog", new_blog_path, class: "btn btn-primary" %>
+           <%= link_to "New Blog", new_blog_path %>
         </li>
       <% end %>
       <!-- <li class="dropdown">
