add model relation between blog and user and auto fill username

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,9 +39,9 @@ video#bgvid {
       width: 85%;
     }
 
-    video, .video-container {
-      display: none;
-    }
+    // video, .video-container {
+    //   display: none;
+    // }
 }
 
 .navbar {
