--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -69,8 +69,8 @@
       </li> -->
     </ul>
     <!-- <button type="button" class="btn btn-default navbar-btn">Button</button> -->
-    <div class="col-sm-3 col-md-3 pull-right">
-      <!-- <div class="navbar-text">Text</div> -->
+    <!-- <div class="col-sm-3 col-md-3 pull-right">
+      <div class="navbar-text">Text</div>
       <form class="navbar-form" role="search">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
@@ -79,7 +79,7 @@
           </div>
         </div>
       </form>
-    </div>
+    </div> -->
   </div>
 </div>
 
