--- a/app/views/devise/registrations/_edit.html.erb
+++ b/app/views/devise/registrations/_edit.html.erb
@@ -18,23 +18,14 @@
             <%= f.email_field :email, autofocus: true, required: "required"  %>
           </div>
 
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-          <% end %>
-
           <div class="field form-group">
             <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
             <%= f.password_field :password, autocomplete: "off", required: "required" %>
           </div>
 
           <div class="field form-group">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "off", required: "required"  %>
-          </div>
-
-          <div class="field form-group">
-            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-            <%= f.password_field :current_password, autocomplete: "off", required: "required"  %>
+            <%= f.label :name %><br />
+            <%= f.text_field :name, autocomplete: "off", required: "required"  %>
           </div>
 
           <div class="actions form-group">
