--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,21 +1,20 @@
 <div class="container text-center">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
+      <div class="img-responsive center-block">
 
-      <h1><%= @blog.headline%></h1>
+        <%= image_tag @blog.image.url(:medium) %>
+      </div>
+      <h3><%= @blog.headline%></h3>
 
-      <br>
-      <br>
-      by <%= @blog.name%>
-      <br>
-      <%= @blog.created_at.in_time_zone("Pacific Time (US & Canada)").strftime "%B %d, %Y %l:%M %P"  %>
+      <%= @blog.name%> | <%= @blog.created_at.in_time_zone("Pacific Time (US & Canada)").strftime "%B %d, %Y %l:%M %P"  %>
       <hr>
       <%= @blog.story%>
 
-      <!-- <% if current_user %>
-      <p><%= link_to "Edit", edit_student_path(@blog) %></p>
-      <p><%= link_to "Delete", student_path(@blog), :method => 'delete' %></p>
-      <% end %> -->
+      <% if current_user %>
+      <p><%= link_to "Edit", edit_blog_path(@blog), :method => 'get' %></p>
+      <p><%= link_to "Delete", blog_path(@blog), :method => 'delete' %></p>
+      <% end %>
       <br>
       <br>
       <p>
