--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,42 +3,39 @@
     <div class="row">
       <video autoplay loop id="bgvid">
         <source src="/videos/beer.mp4" type="video/mp4">
-      </video>
+        </video>
+      </div>
     </div>
   </div>
-</div>
-<div class="blankcontainer">
+  <div class="blankcontainer">
 
-</div>
+  </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
-      <% @blogs.each do |blog| %>
-      <div class="row">
-
-      <div class="col-md-4">
-        <div class="hero-feature">
-
-          <div class="thumbnail">
-          <%= image_tag blog.image.url(:medium) %>
+      <div class="col-md-6 overview">
+        <% @blogs.each do |blog| %>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="hero-feature">
+              <div class="thumbnail">
+                <%= image_tag blog.image.url(:medium) %>
+              </div>
+            </div>
           </div>
-        </div>
+          <div class="col-md-6">
+            <h3 class="fronttitle"><strong><%= link_to blog.headline, blog_path(blog) %></strong></h3>
+            <br>
+            <%= blog.created_at.in_time_zone("Pacific Time (US & Canada)").strftime "%B %d, %Y %l:%M %P"  %> | <%= blog.name %>
+            <br>
+            <br>
+            <%= truncate(blog.story, length: 200) %>,
+            <br>
+          </div>
       </div>
-      <div class="col-md-6" id="overview">
-
-        <h3 class="fronttitle"><strong><%= blog.headline %></strong></h3>
-        <br>
-        <%= blog.created_at.in_time_zone("Pacific Time (US & Canada)").strftime "%B %d, %Y %l:%M %P"  %> | <%= blog.name %>
-        <br>
-        <br>
-        <%= truncate(blog.story, length: 250) %>,
-        <br>
         <hr>
-      </div>
-    </div>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3 overview">
         <p>
           Steph Curry is a better team player than LeBron.
           <br>
