--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <%= form_for @blog do |f| %>
-      <%= f.text_field :headline, class: 'form-control', placeholder: 'Enter headline' %>
+      <%= f.text_field :headline, class: 'form-control', placeholder: 'Enter headline', maxlength: '55' %>
       <br>
       <%= f.text_area :story, class: 'form-control', rows: '5', placeholder: 'Enter Story' %>
       <br>
